CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(SQLITE C)

INCLUDE(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
CONAN_BASIC_SETUP()

SET(sqlite_SRCS sqlite3.c sqlite3.h sqlite3ext.h)

ADD_DEFINITIONS(
	-DSQLITE_ENABLE_FTS4
    -DSQLITE_ENABLE_FTS5
	-DSQLITE_ENABLE_JSON1
    -DSQLITE_ENABLE_RTREE
    -DSQLITE_ENABLE_COLUMN_METADATA
	-DSQLITE_ENABLE_EXPLAIN_COMMENTS
)

ADD_LIBRARY(sqlite3 ${sqlite_SRCS} ../sqlite3.def)
